feat(order): make controller more specific
