# processes/order/src/main/kotlin/io/miragon/zeebe/tm/order/adapter/in/rest/CompleteTaskController.kt
@@ -4,6 +4,7 @@ import io.miragon.zeebe.tm.order.adapter.`in`.rest.model.CompleteTaskDto
 import io.miragon.zeebe.tm.order.adapter.`in`.rest.model.TaskIdDto
 import io.miragon.zeebe.tm.order.adapter.`in`.rest.model.schema.CheckOrderDto
 import io.miragon.zeebe.tm.order.adapter.`in`.rest.model.schema.PrepareOrderSchema
+import io.miragon.zeebe.tm.order.adapter.`in`.rest.model.schema.TaskDto
 import io.miragon.zeebe.tm.order.adapter.`in`.rest.model.toCommand
 import io.miragon.zeebe.tm.order.application.port.`in`.CompleteCheckOrderTaskUseCase
 import io.miragon.zeebe.tm.order.application.port.`in`.CompletePrepareOrderTaskUseCase
@@ -24,7 +25,7 @@ class CompleteTaskController(
     private val logger = KotlinLogging.logger {}
 
     @PostMapping("/complete")
-    fun completeTask(@RequestBody completeTaskDto: CompleteTaskDto<*>): ResponseEntity<TaskIdDto>
+    fun completeTask(@RequestBody completeTaskDto: CompleteTaskDto<TaskDto>): ResponseEntity<TaskIdDto>
     {
         val userTask = completeTaskDto.userTask
 
@@ -51,7 +52,7 @@ class CompleteTaskController(
     }
 
     @PostMapping("/update")
-    fun updateTask(@RequestBody completeTaskDto: CompleteTaskDto<*>): ResponseEntity<TaskIdDto>
+    fun updateTask(@RequestBody completeTaskDto: CompleteTaskDto<TaskDto>): ResponseEntity<TaskIdDto>
     {
         val userTask = completeTaskDto.userTask
         val formData = completeTaskDto.formData
