# processes/order/src/main/kotlin/io/miragon/zeebe/tm/order/adapter/in/rest/model/CompleteTaskDto.kt
@@ -1,6 +1,8 @@
 package io.miragon.zeebe.tm.order.adapter.`in`.rest.model
 
-data class CompleteTaskDto<T>(
+import io.miragon.zeebe.tm.order.adapter.`in`.rest.model.schema.TaskDto
+
+data class CompleteTaskDto<T : TaskDto>(
     val userTask: UserTaskDto,
     val formData: T
 )
